# mbed-mcuboot-demo

./: CMakeLists.txt  README.md  default_bd.cpp  ep-oc-mcu.lib  mbed_app.json  mbed_app_data_sharing.json  mcuboot.lib  shared_data.c  shared_data.h  system_overrides.cpp  user_main.cpp
linker/: README.md
linker/TARGET_K64F/TOOLCHAIN_GCC_ARM/: MK64FN1M0xxx12.ld
shared-data/TARGET_K64F/: reserved_shared_region.c
